--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     #live { position: absolute; left: -9999px; }
     .rij { display: flex; gap: 12px; align-items: center; margin-top: 8px; }
     .rij label { font-size: 14px; user-select: none; }
+    select, input[type="checkbox"] { padding: 6px 8px; border: 2px solid var(--fg); border-radius: 10px; }
   </style>
 </head>
 <body>
@@ -43,6 +44,13 @@
       <label>
         <input type="checkbox" id="spreekToggle" checked />
         Kleur uitspreken
+      </label>
+      <label>
+        Effect
+        <select id="effectSelect">
+          <option value="fade">Zachte fade</option>
+          <option value="veeg">Verfveeg</option>
+        </select>
       </label>
     </div>
     <div id="live" role="status" aria-live="polite"></div>
@@ -74,10 +82,7 @@
     "Oranje":"#fb923c"
   };
   const donkereSegmenten = new Set(["Zwart","Donkerblauw","Donkergroen"]); // witte segmenttekst
-
-  // lijnen wit bij Zwart, verder zwart
   function lijnenMoetenWit(naam) { return naam === "Zwart"; }
-  // pupillen tonen bij Zwart
   function pupillenTonen(naam) { return naam === "Zwart"; }
 
   // ---------------- Spraak ----------------
@@ -132,7 +137,6 @@
       const naam = opties[i];
       const [s, e] = normBoog(i * stap + rot, (i + 1) * stap + rot);
 
-      // segment
       rctx.beginPath();
       rctx.moveTo(CX, CY);
       rctx.arc(CX, CY, R, s, e, false);
@@ -140,12 +144,10 @@
       rctx.fillStyle = kleurMap[naam] || "#000";
       rctx.fill();
 
-      // segment rand
       rctx.strokeStyle = "#222";
       rctx.lineWidth = 2;
       rctx.stroke();
 
-      // label
       const mid = s + (e - s) / 2;
       const tekstkleur = donkereSegmenten.has(naam) ? "#fff" : "#000";
       rctx.save();
@@ -158,7 +160,6 @@
       rctx.restore();
     }
 
-    // buitenring
     rctx.lineWidth = 6;
     rctx.strokeStyle = "#333";
     rctx.beginPath();
@@ -166,7 +167,6 @@
     rctx.stroke();
   }
 
-  // pijl buiten het rad, rechts, wijst naar links
   function tekenPijl() {
     const offset = 22;
     const tipX = CX + R + offset;
@@ -182,7 +182,6 @@
     rctx.fillStyle = "#222";
     rctx.fill();
 
-    // as dopje
     rctx.beginPath();
     rctx.arc(CX, CY, 6, 0, Math.PI * 2);
     rctx.fill();
@@ -200,6 +199,178 @@
     return Math.floor(a / stap) % n;
   }
 
+  // ---------------- Monster ----------------
+  const mCanvas = document.getElementById("monster");
+  const m = mCanvas.getContext("2d");
+  const imgMask  = new Image();  imgMask.src  = "monster-mask.png";
+  const imgLine  = new Image();  imgLine.src  = "monster-line.png";
+  const imgPupil = new Image();  imgPupil.src = "monster-pupillen.png";
+
+  let assetsGereed = false;
+  let geom = null; // {x,y,w,h} voor het monster binnen de canvas
+
+  Promise.all([
+    new Promise(res => imgMask.onload  = res),
+    new Promise(res => imgLine.onload  = res),
+    new Promise(res => imgPupil.onload = res)
+  ]).then(() => {
+    assetsGereed = true;
+    berekenGeom();
+    tekenMonsterKader();
+    // starttoestand
+    currentNaam = gekozen;
+    currentWit  = lijnenMoetenWit(gekozen);
+    currentPup  = pupillenTonen(gekozen);
+    tekenMonsterStatisch(currentNaam, currentWit, currentPup);
+  });
+
+  function berekenGeom() {
+    const pad = 24;
+    const doelW = mCanvas.width - pad * 2;
+    const doelH = mCanvas.height - pad * 2;
+    const ratio = Math.min(doelW / imgMask.width, doelH / imgMask.height);
+    const w = Math.max(1, Math.round(imgMask.width * ratio));
+    const h = Math.max(1, Math.round(imgMask.height * ratio));
+    const x = Math.round((mCanvas.width - w) / 2);
+    const y = Math.round((mCanvas.height - h) / 2);
+    geom = { x, y, w, h, pad };
+  }
+
+  function tekenMonsterKader() {
+    m.clearRect(0, 0, mCanvas.width, mCanvas.height);
+    m.save();
+    m.lineWidth = 6;
+    m.strokeStyle = "#222";
+    m.fillStyle = "#fff";
+    m.beginPath();
+    rondeRechthoek(m, 12, 12, mCanvas.width - 24, mCanvas.height - 24, 18);
+    m.fill();
+    m.stroke();
+    m.restore();
+  }
+
+  // bouw een volledige monsterlaag voor een kleur
+  function bouwMonsterLaag(kleurHex, lijnenWit, pupillen) {
+    const off = document.createElement("canvas");
+    off.width = mCanvas.width;
+    off.height = mCanvas.height;
+    const c = off.getContext("2d");
+    const {x,y,w,h} = geom;
+
+    // vulling binnen masker
+    c.fillStyle = kleurHex;
+    c.fillRect(x, y, w, h);
+    c.globalCompositeOperation = "destination-in";
+    c.imageSmoothingEnabled = true;
+    c.drawImage(imgMask, x, y, w, h);
+    c.globalCompositeOperation = "source-over";
+
+    // lijnen
+    if (!lijnenWit) {
+      c.drawImage(imgLine, x, y, w, h);
+    } else {
+      const tint = document.createElement("canvas");
+      tint.width = w; tint.height = h;
+      const tctx = tint.getContext("2d");
+      tctx.fillStyle = "#ffffff";
+      tctx.fillRect(0, 0, w, h);
+      tctx.globalCompositeOperation = "destination-in";
+      tctx.drawImage(imgLine, 0, 0, w, h);
+      tctx.globalCompositeOperation = "source-over";
+      c.drawImage(tint, x, y);
+    }
+
+    // pupillen
+    if (pupillen) c.drawImage(imgPupil, x, y, w, h);
+
+    return off;
+  }
+
+  function tekenMonsterStatisch(naam, lijnenWit, pupillen) {
+    if (!assetsGereed) return;
+    tekenMonsterKader();
+    const laag = bouwMonsterLaag(kleurMap[naam], lijnenWit, pupillen);
+    m.drawImage(laag, 0, 0);
+  }
+
+  // animaties
+  let currentNaam = opties[0], currentWit = false, currentPup = false;
+
+  function easeInOutCubic(t){ return t<0.5 ? 4*t*t*t : 1 - Math.pow(-2*t + 2, 3)/2; }
+
+  function animFade(vanNaam, vanWit, vanPup, naarNaam, naarWit, naarPup, duur = 700) {
+    const start = performance.now();
+    const laagA = bouwMonsterLaag(kleurMap[vanNaam], vanWit, vanPup);
+    const laagB = bouwMonsterLaag(kleurMap[naarNaam], naarWit, naarPup);
+
+    function frame(now) {
+      const t = Math.min(1, (now - start) / duur);
+      const e = easeInOutCubic(t);
+      tekenMonsterKader();
+      m.globalAlpha = 1;
+      m.drawImage(laagA, 0, 0);
+      m.globalAlpha = e;
+      m.drawImage(laagB, 0, 0);
+      m.globalAlpha = 1;
+      if (t < 1) requestAnimationFrame(frame);
+      else {
+        currentNaam = naarNaam; currentWit = naarWit; currentPup = naarPup;
+      }
+    }
+    requestAnimationFrame(frame);
+  }
+
+  function animVeeg(vanNaam, vanWit, vanPup, naarNaam, naarWit, naarPup, duur = 800) {
+    const start = performance.now();
+    const laagA = bouwMonsterLaag(kleurMap[vanNaam], vanWit, vanPup);
+    const laagB = bouwMonsterLaag(kleurMap[naarNaam], naarWit, naarPup);
+    const {x,y,w,h} = geom;
+    const feather = 28; // zachte rand
+
+    function frame(now) {
+      const t = Math.min(1, (now - start) / duur);
+      const e = easeInOutCubic(t);
+      const dek = x + w * e;
+
+      // masker bouwen met zachte kop
+      const mask = document.createElement("canvas");
+      mask.width = mCanvas.width; mask.height = mCanvas.height;
+      const mc = mask.getContext("2d");
+
+      // vaste deel
+      mc.fillStyle = "#fff";
+      mc.fillRect(x, y, Math.max(0, dek - feather), h);
+
+      // zachte rand
+      const g = mc.createLinearGradient(dek - feather, 0, dek, 0);
+      g.addColorStop(0, "rgba(255,255,255,0)");
+      g.addColorStop(1, "rgba(255,255,255,1)");
+      mc.fillStyle = g;
+      mc.fillRect(dek - feather, y, feather, h);
+
+      // compositie nieuwe laag in masker
+      const temp = document.createElement("canvas");
+      temp.width = mCanvas.width; temp.height = mCanvas.height;
+      const tc = temp.getContext("2d");
+      tc.drawImage(laagB, 0, 0);
+      tc.globalCompositeOperation = "destination-in";
+      tc.drawImage(mask, 0, 0);
+      tc.globalCompositeOperation = "source-over";
+
+      // tekenen
+      tekenMonsterKader();
+      m.drawImage(laagA, 0, 0);      // oud
+      m.drawImage(temp, 0, 0);       // nieuw gemaskeerd
+
+      if (t < 1) requestAnimationFrame(frame);
+      else {
+        currentNaam = naarNaam; currentWit = naarWit; currentPup = naarPup;
+      }
+    }
+    requestAnimationFrame(frame);
+  }
+
+  // ---------------- Draai en wissel ----------------
   function draai() {
     if (bezig) return;
     bezig = true;
@@ -216,15 +387,29 @@
         hoek = hoek % 360;
         renderRad();
         const idx = indexOnderPijl();
-        gekozen = opties[idx];
+        const nieuw = opties[idx];
 
-        toonResultaat(gekozen);
-        const witteLijnen = lijnenMoetenWit(gekozen);
-        const toonPupillen = pupillenTonen(gekozen);
-        kleurMonster(kleurMap[gekozen], witteLijnen, toonPupillen);
+        toonResultaat(nieuw);
 
-        spreekKleur(gekozen);
+        const nieuwWit = lijnenMoetenWit(nieuw);
+        const nieuwPup = pupillenTonen(nieuw);
+        const effect = document.getElementById("effectSelect").value;
 
+        if (!assetsGereed) {
+          // veilige terugval
+          tekenMonsterStatisch(nieuw, nieuwWit, nieuwPup);
+        } else {
+          if (effect === "veeg") {
+            animVeeg(currentNaam, currentWit, currentPup, nieuw, nieuwWit, nieuwPup);
+          } else {
+            animFade(currentNaam, currentWit, currentPup, nieuw, nieuwWit, nieuwPup);
+          }
+        }
+
+        spreekKleur(nieuw);
+
+        // update gekozen en vrijgeven
+        gekozen = nieuw;
         bezig = false;
         document.getElementById("draaiBtn").disabled = false;
       }
@@ -235,88 +420,6 @@
   function toonResultaat(tekst) {
     document.getElementById("resultaat").textContent = `Gekozen kleur: ${tekst}`;
     document.getElementById("live").textContent = `Kleur ${tekst}`;
-  }
-
-  // ---------------- Monster ----------------
-  const mCanvas = document.getElementById("monster");
-  const m = mCanvas.getContext("2d");
-  const imgMask  = new Image();  imgMask.src  = "monster-mask.png";       // witte silhouette
-  const imgLine  = new Image();  imgLine.src  = "monster-line.png";       // zwarte lijnen
-  const imgPupil = new Image();  imgPupil.src = "monster-pupillen.png";   // pupillenlaag
-
-  let assetsGereed = false;
-  Promise.all([
-    new Promise(res => imgMask.onload  = res),
-    new Promise(res => imgLine.onload  = res),
-    new Promise(res => imgPupil.onload = res)
-  ]).then(() => {
-    assetsGereed = true;
-    tekenMonsterKader();
-    kleurMonster(kleurMap[gekozen], lijnenMoetenWit(gekozen), pupillenTonen(gekozen));
-  });
-
-  function tekenMonsterKader() {
-    m.clearRect(0, 0, mCanvas.width, mCanvas.height);
-    m.save();
-    m.lineWidth = 6;
-    m.strokeStyle = "#222";
-    m.fillStyle = "#fff";
-    m.beginPath();
-    rondeRechthoek(m, 12, 12, mCanvas.width - 24, mCanvas.height - 24, 18);
-    m.fill();
-    m.stroke();
-    m.restore();
-  }
-
-  // lijnenWit true geeft witte lijntekening, toonPupillen true tekent pupillen erbovenop
-  function kleurMonster(vulkleur, lijnenWit, toonPupillen) {
-    if (!assetsGereed) return;
-
-    tekenMonsterKader();
-
-    // schalen en centreren
-    const pad = 24;
-    const doelW = mCanvas.width - pad * 2;
-    const doelH = mCanvas.height - pad * 2;
-    const ratio = Math.min(doelW / imgMask.width, doelH / imgMask.height);
-    const w = Math.max(1, Math.round(imgMask.width * ratio));
-    const h = Math.max(1, Math.round(imgMask.height * ratio));
-    const x = Math.round((mCanvas.width - w) / 2);
-    const y = Math.round((mCanvas.height - h) / 2);
-
-    // vulling binnen het masker
-    m.save();
-    m.fillStyle = vulkleur;
-    m.fillRect(x, y, w, h);
-    m.globalCompositeOperation = "destination-in";
-    m.imageSmoothingEnabled = true;
-    m.drawImage(imgMask, x, y, w, h);
-    m.globalCompositeOperation = "source-over";
-
-    // lijnenlaag
-    if (!lijnenWit) {
-      // originele zwarte lijnen
-      m.drawImage(imgLine, x, y, w, h);
-    } else {
-      // naar wit getint via offscreen canvas
-      const off = document.createElement("canvas");
-      off.width = w; off.height = h;
-      const o = off.getContext("2d");
-      o.imageSmoothingEnabled = true;
-      o.fillStyle = "#ffffff";
-      o.fillRect(0, 0, off.width, off.height);
-      o.globalCompositeOperation = "destination-in";
-      o.drawImage(imgLine, 0, 0, off.width, off.height);
-      o.globalCompositeOperation = "source-over";
-      m.drawImage(off, x, y);
-    }
-
-    // pupillen bovenop indien gevraagd
-    if (toonPupillen) {
-      m.drawImage(imgPupil, x, y, w, h);
-    }
-
-    m.restore();
   }
 
   function rondeRechthoek(ctx, x, y, w, h, r) {
